--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
 			"problemMatcher": "$func-java-watch",
 			"isBackground": true,
 			"options": {
-				"cwd": "${workspaceFolder}/azfunction/target/azure-functions/azure-function-protobuf"
+				"cwd": "${workspaceFolder}/target/azure-functions/azure-function-protobuf"
 			},
 			"dependsOn": "package (functions)"
 		},
@@ -21,7 +21,7 @@
 				"isDefault": true
 			},
 			"options": {
-				"cwd": "${workspaceFolder}/azfunction"
+				"cwd": "${workspaceFolder}"
 			}
 		}
 	]
