--- a/.azure/dev/.env
+++ b/.azure/dev/.env
@@ -1,4 +1,4 @@
 AZURE_ENV_NAME="dev"
 AZURE_LOCATION="eastus2"
-AZURE_SUBSCRIPTION_ID="529eddcc-17c4-4834-842d-73670845229b"
+AZURE_RESOURCE_GROUP="rg-protobuf-dev"
 SERVICE_PROTOBUF_RESOURCE_EXISTS="false"
