added azd with postdeploy script workaround

--- a/.azure/dev/.env
+++ b/.azure/dev/.env
@@ -1,4 +1,5 @@
 AZURE_ENV_NAME="dev"
+AZURE_FUNCTION_NAME="fn-protobuf-dev"
 AZURE_LOCATION="eastus2"
 AZURE_RESOURCE_GROUP="rg-protobuf-dev"
 SERVICE_PROTOBUF_RESOURCE_EXISTS="false"
