--- a/azure.yaml
+++ b/azure.yaml
@@ -6,6 +6,18 @@ infra:
   path: infra/terraform
 services:
   protobuf:
-    project: .
+    project: ./
     host: function
     language: java
+hooks:
+    postdeploy:
+      windows:
+        shell: pwsh
+        run: scripts/deploy.ps1
+        interactive: true
+        continueOnError: false
+      posix:
+        shell: sh
+        run: scripts/deploy.sh
+        interactive: true
+        continueOnError: false
